remove dependency on javafx